- Añadido enlace a como se configura cron en los informes de libro de iva. - Añadido a JoeNilson en los creditos porqué está basado en su trabajo.

--- a/view/informe_libro_iva.html
+++ b/view/informe_libro_iva.html
@@ -27,7 +27,7 @@
             </h1>
             <p class="help-block">
                Selecciona un ejercicio, un libro y las fechas inicial y final.
-               Para el correcto funcionamiento, debes tener configurado el cron.
+               Para el correcto funcionamiento, debes tener <a href="https://www.facturascripts.com/foro/configurar-el-cron-de-facturascripts-9.html" target="_blank">configurado el cron</a>.
             </p>
          </div>
          {loop="$fsc->ejercicios"}
